<resources>
    <string name="app_name">Llevame</string>
    <string name="action_settings">Settings</string>

    <string name="llevame_register">Register</string>
    <string name="llevame_profile">Profile</string>

    <string name="facebook_app_id">237709063433511</string>
    <string name="fb_login_protocol_scheme">fb237709063433511</string>

    <string name="google_maps_key">AIzaSyB8J8VeSTWhN4cvXweTK6S0U_TkuEtHttA</string>
    <string name="google_dirs_key">AIzaSyCLpvmGbxhBssuAFAwFv5sd_Ypq8vqMYUk</string>

    <string name="OK">OK</string>

    <string name="login_progress_title">Retrieving User Profile</string>
    <string name="login_progress_message">Please wait...</string>

    <string name="button_login">Sign In</string>
    <string name="button_signup">Sign Up</string>
    <string name="label_or">or...</string>

    <string name="person_username">Username</string>
    <string name="person_password">Password</string>
    <string name="person_email">Email</string>
    <string name="registration_continue">Register</string>

    <string name="register_progress_title">Registering</string>
    <string name="register_progress_message">Please wait...</string>

    <string name="profile_name">First Name</string>
    <string name="profile_last_name">Last Name</string>
    <string name="profile_birthdate">Birthdate</string>
    <string name="profile_location">Country</string>
    <string name="profile_carmodel">Car Model</string>
    <string name="profile_patent">Car Patent</string>
    <string name="profile_car_details">Car Details</string>
    <string name="profile_card_details">Credit Card Details</string>
    <string name="profile_card_number">Card Number</string>
    <string name="profile_security_code">Security Code</string>
    <string name="profile_expiration_date">Expiration Date</string>

    <string name="profile_iam">I am a</string>
    <string name="passenger">Passenger</string>
    <string name="driver">Driver</string>

    <string name="profile_save">Save Profile</string>
    <string name="profile_type_none_selected">No profile type selected</string>

    <string name="registration_successful">Registration Successful</string>
    <string name="registration_failed">Registration Failed</string>

    <string name="profile_updating">Updating Profile</string>
    <string name="profile_updating_message">Please wait...</string>
    <string name="profile_update_success">Update Successful</string>
    <string name="profile_incomplete">Please fill all data fields</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Sign Out</string>

    <string name="logging_out_title">Logging Out</string>
    <string name="logging_out_mesage">Please wait...</string>

    <string name="endpoint_unexpected_error">Something unexpected happened, please try again</string>
    <string name="endpoint_registration_bad_request">asdfasdf</string>
    <string name="endpoint_login_bad_auth">Wrong username or password</string>
    <string name="endpoint_login_bad_request">Bad request</string>

    <string name="fg_notification_text">Running location and trip services</string>

    <string name="action_stop">Stop</string>

    <string name="permissions_required">Error</string>
    <string name="permissions_required_message">This application requires location permissions</string>
    <string name="close_app">Close App</string>

    <string name="location_me">Me</string>
    <string name="location_destination">Destination</string>

    <string name="select_destination">Please select destination and tap confirm</string>
    <string name="select_destination_first">Tap on the map to select destination</string>
    <string name="select_destination_button">Confirm</string>

    <string name="button_refresh">Refresh</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_decline">Decline</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_cancel_trip">Cancel Trip</string>

    <string name="driver_go_meet">Passenger has been notified that their trip request was accepted; please go meet the passenger now.</string>
    <string name="driver_warning">Important: Keep in mind that passenger will be charged from the moment they confirm being in the car; you will be notified once they do so.</string>

    <string name="open_chat">Open Chat</string>
    <string name="chat_window">Chat</string>

    <string name="please_select_path">Please select path first</string>

    <string name="finding_paths_title">Finding Paths</string>
    <string name="finding_paths_message">Please wait...</string>

    <string name="path_list_item">Path #</string>

    <string name="please_select_driver">Please select driver first</string>
    <string name="please_select_driver_detail">Please pick a driver (tap name to see location)</string>

    <string name="finding_drivers_title">Finding Drivers</string>
    <string name="please_wait">Please wait...</string>

    <string name="waiting_driver_confirmation">Waiting for Driver\'s Confirmation</string>

    <string name="driver_idle_message">Waiting for an incoming trip request</string>

    <string name="find_passenger">Find Passenger</string>
    <string name="find_destination">Find Destination</string>

    <string name="go_meet_passenger">Please go meet passenger</string>

    <string name="about_to_cancel_trip">Cancel Trip</string>
    <string name="are_you_sure">Are you sure?</string>

    <string name="passenger_cancelled_trip">Trip cancelled by passenger</string>

    <string name="im_in">I\'m in the Car</string>

    <string name="finish_trip">Finish Trip</string>

    <string name="driver_accepted">The driver has accepted your request and should be coming now to pick you up.
    When you get into the car, please tap the button below to start the trip.</string>

    <string name="about_to_start_trip">Start Trip</string>
    <string name="about_to_start_trip_message">This will notify the driver so he can take you to your destination.</string>

    <string name="driver_declined">Driver %1$s declined trip request</string>
    <string name="driver_cancelled">Driver %1$s cancelled trip</string>

    <string name="option_blocked">You cannot do this while on trip</string>

    <string name="find_my_position">Find my position in map</string>
    <string name="currently_on_trip">Currently on trip.\nTap button below to finalize.</string>

    <string name="finishing_trip">Finishing Trip</string>

    <string name="trip_finished">Trip Finished</string>

    <string name="report_title">Trip Finished</string>

    <string name="distance">Distance:</string>
    <string name="cost">Total Cost:</string>

</resources>
