<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" style="@style/Padded"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/messages"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/driver_go_meet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="@android:color/holo_red_light"
            android:paddingTop="8dp"
            android:text="@string/driver_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/button_cancel_trip"
        android:text="@string/button_cancel_trip"
        android:backgroundTint="@android:color/holo_red_light"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/open_chat"
        android:id="@+id/button_chat"
        android:layout_above="@id/button_cancel_trip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
