<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_find_position"
        android:layout_alignParentTop="true"
        android:text="@string/find_my_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorGrayTransparent"/>

    <TextView
        android:gravity="center"
        android:text="@string/currently_on_trip"
        android:layout_below="@id/button_find_position"
        android:layout_above="@id/button_finish_trip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_finish_trip"
        android:text="@string/finish_trip"
        android:backgroundTint="@color/colorFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
