<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/select_driver_buttons"
        android:layout_alignParentBottom="true"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_refresh"
            android:text="@string/button_refresh"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:backgroundTint="@android:color/holo_green_light"
            android:id="@+id/button_confirm"
            android:text="@string/button_confirm"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:backgroundTint="@android:color/holo_red_light"
            android:id="@+id/button_cancel"
            android:text="@string/button_cancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:padding="4dp"
        android:id="@+id/select_driver_header"
        android:layout_alignParentTop="true"
        android:text="@string/please_select_driver_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/driver_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/select_driver_header"
        android:layout_above="@id/select_driver_buttons">
    </ListView>

</RelativeLayout>
