<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="320dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView style="@style/Padded"
            android:text="@string/report_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18dp" />

        <LinearLayout
            style="@style/PaddedListable"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/distance"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/distance_counter"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            style="@style/PaddedListable"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/cost"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/cost_counter"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView style="@style/Padded"
            android:id="@+id/report_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/button_ok"
        android:layout_alignParentBottom="true"
        android:text="@string/OK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
